Bug 476456 - No scrollbar in simple editing mode
Summary: No scrollbar in simple editing mode
Status: RESOLVED FIXED
Alias: None
Product: sieveeditor
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.22.3
Platform: Debian stable Linux
: NOR normal
Target Milestone: ---
Assignee: Laurent Montel
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-11-02 07:34 UTC by Hans Dijkema
Modified: 2023-11-02 12:42 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 23.08.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Hans Dijkema 2023-11-02 07:34:00 UTC
SUMMARY

Sieve Editor does not produce a scrollbar if the number of items in a condition grows too large.

STEPS TO REPRODUCE

1. Create a long rule in advanced mode, e.g.:

#SCRIPTNAME: subject filter
# rule:[subject filter]
if anyof (header :contains "subject" "kalkvrij water"
, header :contains "subject" "10 Days Detoxication"
, header :contains "subject" "Dit is uw kans"
, header :contains "subject" "PEEK antiaanbaklaag"
, header :contains "subject" "spataderen kwijt zonder operatie"
, header :contains "subject" "Nespresso Vertuo"
, header :contains "subject" "Detox Programma Nuubu"
, header :contains "subject" "Ryoko Portable Wi-fi"
, header :contains "subject" "Derila Kussen"
, header :contains "subject" "Directe tweetalige taalvertaler"
, header :contains "subject" "Removio"
, header :contains "subject" "Online store for best price"
, header :contains "subject" "De beste pillen"
, header :contains "subject" "Renforce le système cardiovasculaire"
, header :contains "subject" "Individuele prognose voor gewichtsverlies"
, header :contains "subject" "De beste site om"
)
{
    setflag [ "\\Seen" ];
    fileinto "Spam";
} 

2. Enter simple mode 

OBSERVED RESULT
A long list with conditions, without a scrollbar. The rule cannot be edited anymore. 
Also the window is enlarged and cannot be made smaller anymore. 
The simple rule editing widget simply grows over the border of the screen size. 
The application becomes unusable. 

EXPECTED RESULT
A scrollbar to make sure the whole rule can be edited. 


SOFTWARE/OS VERSIONS
Windows: 
Besturingssysteem: Debian GNU/Linux 12
KDE Plasma-versie: 5.27.5
Versie van KDE-Frameworks: 5.103.0
Qt-versie: 5.15.8
Kernel-versie: 6.1.0-13-amd64 (64-bits)
Grafisch platform: Wayland
Processors: 4 × 11th Gen Intel® Core™ i3-1115G4 @ 3.00GHz
Geheugen: 30,9 GiB RAM
Grafische processor: Mesa Intel® UHD Graphics

ADDITIONAL INFORMATION
Comment 1 Laurent Montel 2023-11-02 07:53:56 UTC
Hi,
I confirm it.
I will work on it soon.
thanks a lot
Comment 2 Laurent Montel 2023-11-02 12:29:30 UTC
Git commit 39ab9f6a7954a4914c52f82e8403d6e56803f3ec by Laurent Montel.
Committed on 02/11/2023 at 13:29.
Pushed by mlaurent into branch 'release/23.08'.

Add scrollarea

M  +9    -1    src/ksieveui/autocreatescripts/sieveglobalvariablewidget.cpp
M  +9    -1    src/ksieveui/autocreatescripts/sieveincludewidget.cpp

https://invent.kde.org/pim/libksieve/-/commit/39ab9f6a7954a4914c52f82e8403d6e56803f3ec
Comment 3 Laurent Montel 2023-11-02 12:42:35 UTC
Git commit 8111ad54030f6d1a38d9c340fb0bbb5d96e691d0 by Laurent Montel.
Committed on 02/11/2023 at 13:41.
Pushed by mlaurent into branch 'release/23.08'.

Fix bug 476456: No scrollbar in simple editing mode

FIXED-IN: 23.08.3

M  +15   -3    src/ksieveui/autocreatescripts/sievescriptblockwidget.cpp

https://invent.kde.org/pim/libksieve/-/commit/8111ad54030f6d1a38d9c340fb0bbb5d96e691d0