Fix bug 476456: No scrollbar in simple editing mode

FIXED-IN: 23.08.3
BUG: 476456